dnl Process this file with autoconf to produce a configure script.
AC_INIT(tedMain.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_XTRA
AC_PATH_XPM
AC_PATH_XM
AC_PATH_PNG
AC_PATH_ZLIB
AC_PATH_JPEG
AC_PATH_TIFF
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

AC_LD_FLAGS_STATIC
AC_GUESS_PLATFORM
AC_PATH_GTK

dnl Checks for library functions.
AC_CHECK_FUNCS(socket strerror uname)

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_INSTALL_LOCATIONS
AC_CHOOSE_GUI

AC_CONFIG_HEADER(tedConfig.h)
AC_OUTPUT(makefile)
