dnl Process this file with autoconf to produce a configure script.
AC_INIT(sioGeneral.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_ZLIB
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_STAT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h unistd.h socket.h sys/socket.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_STRUCT_UTSNAME_DOMAINNAME

AC_C_BIGENDIAN
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(unsigned short)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(unsigned long)

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(mkdir socket strerror strtod strtol uname)

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_CONFIG_HEADER(appUtilConfig.h)
AC_OUTPUT(makefile)
