dnl Process this file with autoconf to produce a configure script.
AC_INIT(indfront.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(socket strerror uname)

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_CONFIG_HEADER(indConfig.h)
AC_OUTPUT(makefile)
